@@ -1,3 +1,8 @@
+2007-10-19  Akim Demaille  <demaille@gostai.com>
+
+	Reject for&.
+	* src/parser/bison/ugrammar.y: here.
+
 2007-10-19  Akim Demaille  <akim@lrde.epita.fr>
 
 	libport use.
